--- a/app/app/src/main/res/layout/activity_login.xml
+++ b/app/app/src/main/res/layout/activity_login.xml
@@ -26,6 +26,7 @@
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/quicksandmedium"
             android:text="Entrar"
             android:textColor="@color/black"
             android:textSize="34sp"
@@ -41,6 +42,7 @@
             android:layout_height="wrap_content"
             android:drawableLeft="@drawable/ic_baseline_person_24"
             android:ems="10"
+            android:fontFamily="@font/quicksandmedium"
             android:hint="Usuario"
             android:inputType="textPersonName"
             android:textColor="#6E6E6E"
@@ -55,6 +57,7 @@
             android:layout_height="wrap_content"
             android:drawableLeft="@drawable/ic_baseline_lock_24"
             android:ems="10"
+            android:fontFamily="@font/quicksandmedium"
             android:hint="Contraseña"
             android:inputType="textPassword"
             android:textColor="#6E6E6E"
@@ -68,6 +71,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/boton_redondo"
+            android:fontFamily="@font/quicksandmedium"
             android:onClick="botonentrar"
             android:text="Entrar"
             android:textColor="@color/white"
