--- a/app/app/src/main/res/layout/activity_edit_user.xml
+++ b/app/app/src/main/res/layout/activity_edit_user.xml
@@ -58,6 +58,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="70dp"
             android:layout_marginBottom="10dp"
+            android:fontFamily="@font/quicksandmedium"
             android:text="Nombre" />
 
         <EditText
@@ -74,6 +75,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="70dp"
+            android:fontFamily="@font/quicksandmedium"
             android:text="Correo" />
 
         <EditText
@@ -90,6 +92,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="70dp"
+            android:fontFamily="@font/quicksandmedium"
             android:text="Teléfono" />
 
         <EditText
@@ -108,6 +111,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="100dp"
         android:background="@drawable/boton_redondo"
+        android:fontFamily="@font/quicksandmedium"
         android:onClick="botonguardar"
         android:text="Guardar"
         android:textColor="@color/white"
