--- a/app/app/src/main/res/layout/activity_main.xml
+++ b/app/app/src/main/res/layout/activity_main.xml
@@ -66,6 +66,7 @@
             android:id="@+id/textView3"
             android:layout_width="382dp"
             android:layout_height="225dp"
+            android:fontFamily="@font/quicksandmedium"
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
             android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ut lacus ut neque sollicitudin hendrerit. Praesent dictum accumsan imperdiet. Quisque mollis sem at lectus placerat pellentesque. Proin et elit quis purus venenatis sagittis eget a turpis. Donec ut volutpat odio. Proin non ex laoreet, venenatis lorem eget, sagittis dui. Suspendisse sed leo sit amet ex venenatis porttitor. Aliquam erat volutpat. Nulla efficitur neque sagittis libero mattis, non placerat orci vestibulum. Morbi non tortor non nisi viverra elementum eu non lacus. Etiam iaculis lobortis orci. Vivamus tristique mauris ac erat pretium pretium. Vivamus congue egestas scelerisque. Phasellus tempus gravida arcu, sollicitudin aliquet mauris rutrum a."
