--- a/app/app/src/main/res/layout/activity_user_area.xml
+++ b/app/app/src/main/res/layout/activity_user_area.xml
@@ -70,6 +70,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="200dp"
         android:background="@drawable/boton_redondo"
+        android:fontFamily="@font/quicksandmedium"
         android:text="Conectar"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -80,6 +81,7 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/quicksandmedium"
         android:text="No estás conectado con el dispositivo"
         app:layout_constraintBottom_toTopOf="@+id/button2"
         app:layout_constraintEnd_toEndOf="parent"
