--- a/app/app/src/main/res/xml/network_security_config.xml
+++ b/app/app/src/main/res/xml/network_security_config.xml
@@ -4,6 +4,7 @@
         <domain includeSubdomains="true">localhost</domain>
         <domain includeSubdomains="true">192.168.1.131</domain>
         <domain includeSubdomains="true">192.168.0.14</domain>
+        <domain includeSubdomains="true">192.168.43.79</domain>
 
         <!--CREAR OTRO DOMINIO CON LA IP DEL ORDENADOR DONDE SE VAN A ENVIAR LOS POST DEL SERVIDOR-->
     </domain-config>
