--- a/app/app/src/main/res/layout/activity_user_area.xml
+++ b/app/app/src/main/res/layout/activity_user_area.xml
@@ -76,12 +76,12 @@
         app:layout_constraintTop_toBottomOf="@+id/iddispositivouser" />
 
     <TextView
-        android:id="@+id/nivelo3"
+        android:id="@+id/tiposensor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
         android:fontFamily="@font/quicksandmedium"
-        android:text="O3:"
+        android:text="tipo"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
