--- a/app/app/src/main/res/values/themes.xml
+++ b/app/app/src/main/res/values/themes.xml
@@ -14,11 +14,20 @@
         <!-- Customize your theme here. -->
 
     </style>
-    
+
     <style name="Theme.AppCompat.Light.NoActionBar.Transparent">
         <item name="windowNoTitle">true</item>
         <item name="android:windowTranslucentNavigation">true</item>
         <item name="windowActionBar">false</item>
         <item name="android:windowTranslucentStatus">true</item>
     </style>
+
+    <style name="Theme.AppCompat.Light.NoActionBar.Transparent.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="Theme.AppCompat.Light.NoActionBar.Transparent.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.AppCompat.Light.NoActionBar.Transparent.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
