--- a/app/app/src/main/res/layout/activity_user_area.xml
+++ b/app/app/src/main/res/layout/activity_user_area.xml
@@ -99,6 +99,17 @@
         app:layout_constraintStart_toStartOf="@+id/tiposensor"
         app:layout_constraintTop_toBottomOf="@+id/tiposensor" />
 
+    <Button
+        android:id="@+id/menuButton4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="28dp"
+        android:text="MENU"
+        app:layout_constraintEnd_toEndOf="@+id/button2"
+        app:layout_constraintHorizontal_bias="0.516"
+        app:layout_constraintStart_toStartOf="@+id/button2"
+        app:layout_constraintTop_toBottomOf="@+id/button2" />
+
     <!--
     <Button
         android:id="@+id/botonbluet"
