--- a/app/app/src/main/res/values/themes.xml
+++ b/app/app/src/main/res/values/themes.xml
@@ -1,10 +1,10 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Sprint0Laura" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Sprint0Laura" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/green_basic</item>
         <item name="colorPrimaryVariant">@color/green_basic</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorOnPrimary">@color/teal_200</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/green_basic</item>
         <item name="colorSecondaryVariant">@color/green_basic</item>
@@ -14,11 +14,15 @@
         <!-- Customize your theme here. -->
 
     </style>
-    
-    <style name="Theme.AppCompat.Light.NoActionBar.Transparent">
-        <item name="windowNoTitle">true</item>
-        <item name="android:windowTranslucentNavigation">true</item>
+
+
+
+    <style name="Theme.AppCompat.Light.NoActionBar.NoActionBar">
         <item name="windowActionBar">false</item>
-        <item name="android:windowTranslucentStatus">true</item>
+        <item name="windowNoTitle">true</item>
     </style>
+
+    <style name="Theme.AppCompat.Light.NoActionBar.Transparent.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.AppCompat.Light.NoActionBar.Transparent.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
