--- a/app/app/src/main/res/values/themes.xml
+++ b/app/app/src/main/res/values/themes.xml
@@ -17,7 +17,7 @@
 
 
 
-    <style name="Theme.AppCompat.Light.NoActionBar.NoActionBar">
+    <style name="Theme.AppCompat.Light.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
