--- a/app/app/src/main/res/layout/activity_contactar.xml
+++ b/app/app/src/main/res/layout/activity_contactar.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
+
     tools:context=".EditUserActivity">
 
 
@@ -23,6 +25,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+
             app:layout_constraintVertical_bias="0.65"
             app:srcCompat="@drawable/ic_baseline_menu_40" />
 
