--- a/app/app/src/main/res/layout/activity_fragment_main.xml
+++ b/app/app/src/main/res/layout/activity_fragment_main.xml
@@ -5,6 +5,7 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
 
@@ -19,6 +20,8 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
+        android:background="#000000"
         android:fitsSystemWindows="true"
+        app:itemTextColor="#FFFFFF"
         app:menu="@menu/activity_main_drawer" />
 </androidx.drawerlayout.widget.DrawerLayout>
