--- a/app/app/src/main/res/layout/activity_login.xml
+++ b/app/app/src/main/res/layout/activity_login.xml
@@ -46,6 +46,7 @@
             android:hint="Usuario"
             android:inputType="textPersonName"
             android:textColor="#6E6E6E"
+            android:textColorHint="#5E5E5E"
             app:layout_constraintBottom_toTopOf="@+id/edittextpass"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -60,7 +61,7 @@
             android:fontFamily="@font/quicksandmedium"
             android:hint="Contraseña"
             android:inputType="textPassword"
-            android:textColor="#6E6E6E"
+            android:textColorHint="#5E5E5E"
             app:layout_constraintBottom_toTopOf="@+id/button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -86,8 +87,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="32dp"
+            android:fontFamily="@font/quicksandmedium"
             android:text="Recuerdame"
             android:textColor="@color/black"
+            android:textColorLink="#000000"
             app:layout_constraintBottom_toBottomOf="@+id/imageView2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -112,6 +115,7 @@
             android:id="@+id/btn_link"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/quicksandmedium"
             android:text="He olvidado mi constraseña"
             android:textColor="@color/black"
             app:layout_constraintBottom_toBottomOf="parent"
