--- a/app/app/src/main/res/layout/app_bar_fragment_main.xml
+++ b/app/app/src/main/res/layout/app_bar_fragment_main.xml
@@ -9,14 +9,14 @@
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar.Transparent.AppBarOverlay">
+        android:theme="@style/Theme.Sprint0Laura.AppBarOverlay">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/Theme.AppCompat.Light.NoActionBar.Transparent.PopupOverlay" />
+            android:background="@color/green_basic"
+            app:popupTheme="@style/Theme.Sprint0Laura.PopupOverlay" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
