--- a/app/app/src/main/res/layout/fragment_user_area.xml
+++ b/app/app/src/main/res/layout/fragment_user_area.xml
@@ -4,27 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragments.HomeFragment">
+    tools:context=".Fragments.UserAreaFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Añadir dispositivo"
-            app:layout_constraintEnd_toEndOf="@+id/imageButton"
-            app:layout_constraintStart_toStartOf="@+id/imageButton"
-            app:layout_constraintTop_toBottomOf="@+id/imageButton" />
-
-        <ImageButton
-            android:id="@+id/imageButton"
-            android:layout_width="88dp"
-            android:layout_height="85dp"
-            android:onClick="botonIrUserArea"
-            android:src="@drawable/ic_baseline_add_circle_outline_24"
+        <Button
+            android:id="@+id/button7"
+            android:layout_width="104dp"
+            android:layout_height="32dp"
+            android:text="Button"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
