--- a/app/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/app/src/main/res/menu/activity_main_drawer.xml
@@ -25,5 +25,10 @@
             android:id="@+id/nav_gases"
             android:icon="@drawable/datos"
             android:title="Gases nocivos" />
+        <item
+            android:id="@+id/nav_logout"
+            android:icon="@drawable/ic_baseline_logout_40"
+            android:title="Cerrar sesión" />
+
     </group>
 </menu>
