--- a/app/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/app/src/main/res/navigation/mobile_navigation.xml
@@ -34,4 +34,9 @@
         android:name="com.example.lpamvil.sprint0laura.Fragments.GasesFragment"
         android:label="Gases nocivos"
         tools:layout="@layout/fragment_gases" />
+    <fragment
+        android:id="@+id/nav_logout"
+        android:name="com.example.lpamvil.sprint0laura.Fragments.LogoutFragment"
+        android:label="Gases nocivos"
+        tools:layout="@layout/fragment_logout" />
 </navigation>
