--- a/app/app/src/main/res/values/themes.xml
+++ b/app/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Sprint0Laura" parent="Theme.MaterialComponents.Light.NoActionBar">
+    <style name="Theme.Sprint0Laura" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/green_basic</item>
         <item name="colorPrimaryVariant">@color/green_basic</item>
@@ -10,19 +10,23 @@
         <item name="colorSecondaryVariant">@color/green_basic</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" >#FF0000</item>
+
+
+        <!--<item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item> -->
+
         <!-- Customize your theme here. -->
 
     </style>
 
 
 
-    <style name="Theme.AppCompat.Light.NoActionBar.NoActionBar">
+    <style name="Theme.Sprint0Laura.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="Theme.AppCompat.Light.NoActionBar.Transparent.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="Theme.Sprint0Laura.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
-    <style name="Theme.AppCompat.Light.NoActionBar.Transparent.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="Theme.Sprint0Laura.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
