--- a/app/app/src/main/res/layout/activity_edit_user.xml
+++ b/app/app/src/main/res/layout/activity_edit_user.xml
@@ -14,7 +14,7 @@
         android:background="@color/green_basic">
 
         <ImageButton
-            android:id="@+id/imageButton2"
+            android:id="@+id/botonmenu_userarea"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
@@ -29,7 +29,7 @@
             android:id="@+id/imageView4"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.41"
-            app:layout_constraintStart_toEndOf="@+id/imageButton2"
+            app:layout_constraintStart_toEndOf="@+id/botonmenu_userarea"
             android:layout_width="59dp"
             android:layout_height="53dp"
             app:layout_constraintBottom_toBottomOf="parent"
